--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>Testing MathJax</title>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            showMathMenu: false
+        });
+    </script>
     <script type="text/javascript"
             src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
